--- a/library-datastore/build.gradle
+++ b/library-datastore/build.gradle
@@ -51,5 +51,5 @@ dependencies {
     // Library
     // ------------------------
 
-    implementation project(':materialpreferences-core')
+    implementation project(':core')
 }
