--- a/settings.gradle
+++ b/settings.gradle
@@ -1,19 +1,19 @@
 include ':demo'
 
-include ':materialpreferences-core'
-project(':materialpreferences-core').projectDir = new File(settingsDir, 'library')
-include ':materialpreferences-datastore'
-project(':materialpreferences-datastore').projectDir = new File(settingsDir, 'library-datastore')
-include ':materialpreferences-preference-screen'
-project(':materialpreferences-preference-screen').projectDir = new File(settingsDir, 'library-preference-screen')
+include ':core'
+project(':core').projectDir = new File(settingsDir, 'library')
+include ':datastore'
+project(':datastore').projectDir = new File(settingsDir, 'library-datastore')
+include ':screen'
+project(':screen').projectDir = new File(settingsDir, 'library-preference-screen')
 
 // ------------
 // Extensions
 // ------------
 
-include ':materialpreferences-preference-screen-input'
-project(':materialpreferences-preference-screen-input').projectDir = new File(settingsDir, 'library-preference-screen-input')
-include ':materialpreferences-preference-screen-choice'
-project(':materialpreferences-preference-screen-choice').projectDir = new File(settingsDir, 'library-preference-screen-choice')
-include ':materialpreferences-preference-screen-color'
-project(':materialpreferences-preference-screen-color').projectDir = new File(settingsDir, 'library-preference-screen-color')
+include ':screen-input'
+project(':screen-input').projectDir = new File(settingsDir, 'library-preference-screen-input')
+include ':screen-choice'
+project(':screen-choice').projectDir = new File(settingsDir, 'library-preference-screen-choice')
+include ':screen-color'
+project(':screen-color').projectDir = new File(settingsDir, 'library-preference-screen-color')
