--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -17,8 +17,7 @@
         </activity>
 
         <activity
-            android:name=".SettingsActivity"
-            android:theme="@style/AppThemeSettings" />
+            android:name=".SettingsActivity"/>
     </application>
 
 </manifest>
