--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,11 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-parcelize'
     id 'kotlinx-serialization'
-    id 'com.github.dcendents.android-maven'
 }
-
-group = 'com.github.MFlisar'
 
 android {
 
