--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DemoActivity">
+
+        <activity
+            android:name=".activities.DemoActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -17,7 +20,9 @@
         </activity>
 
         <activity
-            android:name=".SettingsActivity"/>
+            android:name=".activities.CustomSettingsActivity"
+            android:exported="true" />
+
     </application>
 
 </manifest>
