--- a/library-preference-screen-choice/build.gradle
+++ b/library-preference-screen-choice/build.gradle
@@ -65,3 +65,5 @@ dependencies {
     implementation "com.afollestad.material-dialogs:core:${versions.materialDialogs}"
     implementation "com.afollestad.material-dialogs:bottomsheets:${versions.materialDialogs}"
 }
+
+apply from: '../maven.gradle'
