--- a/library-preference-screen-color/build.gradle
+++ b/library-preference-screen-color/build.gradle
@@ -65,3 +65,5 @@ dependencies {
     implementation "com.afollestad.material-dialogs:color:${versions.materialDialogs}"
     implementation "com.afollestad.material-dialogs:bottomsheets:${versions.materialDialogs}"
 }
+
+apply from: '../maven.gradle'
