--- a/library-preference-screen-bool/src/main/AndroidManifest.xml
+++ b/library-preference-screen-bool/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.michaelflisar.materialpreferences.preferencescreen.input">
+    package="com.michaelflisar.materialpreferences.preferencescreen.bool">
 
     <application>
         <provider
