added aes encryption module

--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -62,6 +62,7 @@ dependencies {
 
     implementation project(':core')
     implementation project(':datastore')
+    implementation project(':encryption')
     implementation project(':screen')
     implementation project(':screen-bool')
     implementation project(':screen-input')
