--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,8 @@ include ':datastore'
 project(':datastore').projectDir = new File(settingsDir, 'library-datastore')
 include ':screen'
 project(':screen').projectDir = new File(settingsDir, 'library-preference-screen')
+include ':encryption'
+project(':encryption').projectDir = new File(settingsDir, 'library-encryption-aes')
 
 // ------------
 // Extensions
