readme + set order + module name

--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -62,7 +62,7 @@ dependencies {
 
     implementation project(':core')
     implementation project(':datastore')
-    implementation project(':encryption')
+    implementation project(':encryption-aes')
     implementation project(':screen')
     implementation project(':screen-bool')
     implementation project(':screen-input')
